# notebookllm-lite

./: .gitignore  main.py  notebookllm.db  pyproject.toml  service.py
routers/: engine_router.py  ingest_document.py  mindmap_router.py  search.py
schemas/: document.py
services/: create_engine.py  database.py  datastore_service.py  gcs_service.py  ingestion_service.py  mindmap.py  search_service.py
utils/: settings.py
